# Bane

./: .clang-format  .gitignore  CMakeLists.txt  README.md  b.bat
include/bane/: bane.hpp
include/bane/components/: bobject.hpp  camera.hpp  character.hpp  lightdata.hpp  staticmesh.hpp
include/bane/controllers/: icontroller.hpp  spectatorController.hpp  testCharController.hpp
include/bane/core/: scene.hpp
include/bane/data/: resource.hpp
include/bane/primitives/: animatedModel.hpp  mesh.hpp  model.hpp  pointLight.hpp  texture.hpp  vertex.hpp
include/bane/scene/: sceneAnimatedModel.hpp  sceneModel.hpp
include/bane/shaders/: anim_light_vert.glsl  rgb_tri_frag.glsl  rgb_tri_fragment.glsl  rgb_tri_vertex.glsl  simple_light_frag.glsl  simple_light_vert.glsl  simple_pixel_frag.glsl  tex_frag_lit.glsl  tex_frag_nolit.glsl  tex_vert_nolit.glsl  tex_vert_nolit_noanim.glsl
include/bane/utility/: AABB.hpp  boneRotation.hpp  ray.hpp  shader.hpp
src/: bane.cpp
src/components/: bobject.cpp  camera.cpp  character.cpp  staticmesh.cpp
src/controllers/: icontroller.cpp  spectatorController.cpp  testCharController.cpp
src/data/: resource.cpp
src/primitives/: animatedModel.cpp  instancedStaticMeshes.cpp  material.cpp  mesh.cpp  model.cpp  pointLight.cpp  primitives.cpp  skybox.cpp  texture.cpp
src/scene/: sceneLoader.cpp
src/ui/: button.cpp
src/utility/: AABB.cpp  ray.cpp  shader.cpp
